2008-10-17  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix badarg issue on get_roster_info
	when allowed roster groups is not defined

2008-10-14  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix pubsub_publish_item hook
	ServerHost parameter (EJAB-772)

2008-10-13  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/ejabberd_odbc.erl: log MySQL driver messages.

2008-10-13  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: When requesting page of
	nonexistent user, show 'Not Found' page (EJAB-771)

2008-10-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Run new hook
	webadmin_user_parse_query when POST in web admin user
	page (thanks to Oleg Palij)(EJAB-747)
	* src/mod_offline.erl: Add button "Remove All Offline Messages" in
	a user page (thanks to Oleg Palij)(EJAB-747)
	* src/mod_offline_odbc.erl: Likewise

	* src/web/ejabberd_web_admin.erl: Improve Web Admin navigation
	menu for vhosts and nodes (EJAB-734)

	* doc/guide.tex: Explain the new ejabberdctl command 'help'
	* doc/guide.html: Likewise

	* src/mod_configure.erl: Update calls from ctl to
	commands (EJAB-694)
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/ejabberd_sm.erl: Update from ctl to commands (EJAB-694)
	* src/ejabberd_s2s.erl: Likewise

	* src/ejabberd_auth.erl: Update from ctl to commands (EJAB-694)
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise

	* src/ejabberdctl.template: Move help print to a separate
	function (EJAB-694)

	* src/ejabberd_ctl.erl: Add frontend support for
	commands (EJAB-694). Categorization and sorting of commands in
	ejabberd_ctl help (EJAB-313). Lines in command line help of length
	80, and text formatting (EJAB-473)

	* src/ejabberd_app.erl: Initialize ejabberd_commands and start
	ejabbed_admin (EJAB-694)
